# task_manager

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
task_manager/: settings.py  urls.py
tasks/: models.py  permissions.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tasks/tests/: test_models.py  test_permissions.py  test_serializers.py  test_views.py
users/tests/: test_authentication.py
